[gd_scene load_steps=8 format=3 uid="uid://bhourqf2pkoed"]

[ext_resource type="Script" path="res://main.gd" id="1_60n8e"]
[ext_resource type="Texture2D" uid="uid://p3kcg112as60" path="res://Resources/monitor.png" id="1_igrhy"]
[ext_resource type="Shader" path="res://main.gdshader" id="3_pculs"]

[sub_resource type="SystemFont" id="SystemFont_webmg"]

[sub_resource type="Theme" id="Theme_gkcnl"]
default_font = SubResource("SystemFont_webmg")
default_font_size = 36

[sub_resource type="SystemFont" id="SystemFont_ge6j2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_joqfy"]
shader = ExtResource("3_pculs")
shader_parameter/overlay = false
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.3
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 15.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.05
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 0.03
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 1.0
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[node name="main" type="Node2D"]
script = ExtResource("1_60n8e")

[node name="create" type="Button" parent="."]
offset_left = 201.0
offset_top = 334.0
offset_right = 822.0
offset_bottom = 517.0
theme = SubResource("Theme_gkcnl")
text = "DEVELOP NEW GAME"

[node name="shutdown" type="Button" parent="."]
offset_left = 753.0
offset_top = 919.0
offset_right = 784.0
offset_bottom = 951.0

[node name="balance" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = 332.0
offset_top = 217.0
offset_right = 514.0
offset_bottom = 267.0
theme_override_fonts/font = SubResource("SystemFont_ge6j2")
theme_override_font_sizes/font_size = 36
text = "BALANCE: "
horizontal_alignment = 1

[node name="due" type="Label" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
offset_left = 191.0
offset_top = 212.0
offset_right = 272.0
offset_bottom = 235.0
text = "DUE: "

[node name="day" type="Label" parent="."]
visible = false
modulate = Color(0.0156863, 0.0156863, 0.0156863, 1)
offset_left = 308.0
offset_top = 513.0
offset_right = 349.0
offset_bottom = 536.0
text = "DAY: "

[node name="loan" type="Button" parent="."]
visible = false
offset_left = 163.0
offset_top = 376.0
offset_right = 320.0
offset_bottom = 426.0
text = "TAKE A LOAN"

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
offset_left = 159.0
offset_top = 242.0
offset_right = 562.0
offset_bottom = 269.0

[node name="pay" type="Button" parent="."]
visible = false
offset_left = 370.0
offset_top = 374.0
offset_right = 527.0
offset_bottom = 422.0
text = "PAY LOAN"

[node name="reputation" type="Label" parent="."]
offset_left = 408.0
offset_top = 619.0
offset_right = 665.0
offset_bottom = 669.0
theme_override_font_sizes/font_size = 36
text = "REPUTATION"

[node name="reputation_bar" type="ProgressBar" parent="."]
offset_left = 232.0
offset_top = 680.0
offset_right = 795.0
offset_bottom = 734.0
theme_override_font_sizes/font_size = 36

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_joqfy")
offset_left = 98.0
offset_top = 118.0
offset_right = 902.0
offset_bottom = 802.0
mouse_filter = 2

[node name="monitor" type="Sprite2D" parent="."]
position = Vector2(500.256, 497.835)
scale = Vector2(2.88349, 3.03782)
texture = ExtResource("1_igrhy")

[connection signal="pressed" from="create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="shutdown" to="." method="_on_shutdown_pressed"]
